--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,7 @@
 		<title>Headlines</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="author" content="Akshay Sharma (https://akshaykumar6.github.io)" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
 		<% if (htmlWebpackPlugin.options.manifest.theme_color) { %>
