--- a/src/template.html
+++ b/src/template.html
@@ -6,23 +6,26 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="author" content="Akshay Sharma (https://akshaykumar6.github.io)" />
-		<meta name="Description" content="News headlines from over 30,000 news sources and blogs">
+		<meta name="description" content="News headlines from over 30,000 news sources and blogs">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-		<link rel="apple-touch-icon" href="assets/icons/apple-icon-180x180.png">
-		<link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="assets/icons/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="assets/icons/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.png">
+		<link rel="apple-touch-icon" href="assets/icons/apple-icon-180x180.jpg">
+		<link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple-icon-57x57.jpg">
+		<link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple-icon-60x60.jpg">
+		<link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-icon-72x72.jpg">
+		<link rel="apple-touch-icon" sizes="76x76" href="assets/icons/apple-icon-76x76.jpg">
+		<link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple-icon-114x114.jpg">
+		<link rel="apple-touch-icon" sizes="120x120" href="assets/icons/apple-icon-120x120.jpg">
+		<link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-icon-144x144.jpg">
+		<link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.jpg">
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.jpg">
 		<link rel="icon" type="image/png" sizes="192x192"  href="assets/icons/android-icon-192x192.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+		
+
 		<meta name="msapplication-TileColor" content="#014473">
 		<meta name="msapplication-TileImage" content="assets/icons/ms-icon-144x144.png">
 		<meta name="theme-color" content="#014473">
@@ -43,7 +46,7 @@
 			<% } %>
 		<% } %>
 	</head>
-	<body>
+	<body ontouchstart="">
 		<%= htmlWebpackPlugin.options.ssr({
 			url: '/'
 		}) %>
