--- a/src/template.html
+++ b/src/template.html
@@ -8,8 +8,8 @@
 		<meta name="author" content="Akshay Sharma (https://akshaykumar6.github.io)" />
 		<meta name="description" content="News headlines from over 30,000 news sources and blogs">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
+		<meta name="apple-mobile-web-app-status-bar-style" content="green">
+		
 		<link rel="apple-touch-icon" href="assets/icons/apple-icon-180x180.jpg">
 		<link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple-icon-57x57.jpg">
 		<link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple-icon-60x60.jpg">
@@ -20,6 +20,14 @@
 		<link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-icon-144x144.jpg">
 		<link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.jpg">
 		<link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.jpg">
+		<link href="assets/splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+		<link href="assets/splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+		<link href="assets/splashscreens/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+		<link href="assets/splashscreens/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+		<link href="assets/splashscreens/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+		<link href="assets/splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+		<link href="assets/splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+		
 		<link rel="icon" type="image/png" sizes="192x192"  href="assets/icons/android-icon-192x192.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
@@ -45,6 +53,17 @@
 				<% } %>
 			<% } %>
 		<% } %>
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-43274822-4"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-43274822-4');
+		</script>
+
 	</head>
 	<body ontouchstart="">
 		<%= htmlWebpackPlugin.options.ssr({
